<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ice</string>
    <string name="steamMatcher_profile_regex">steamcommunity.com/profiles/([0&#8211;9]+)</string>
    <string name="steamMatcher_id_regex">steamcommunity.com/id/([a&#8211;zA&#8211;Z0&#8211;9]+)</string>
    <string name="nav_browser">Steam Browser</string>
    <string name="web_back">Go Back</string>
    <string name="web_forward">Go Forward</string>
    <string name="web_reload">Reload Page</string>
    <string name="web_community">Steam Community</string>
    <string name="web_store">Steam Store</string>
    <string name="web_toggle_view">Desktop view</string>
    <string name="not_connected_to_internet">You are not connected to the internet.</string>
    <string name="action_successful">Action successful.</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="steamguard_import_authenticator_mafile">Import .maFile</string>
    <string name="steamguard_code">Your Steam Guard Code:</string>
    <string name="steamguard_mobile_authenticator">Mobile Authenticator</string>
    <string name="steamguard_select_mafile">Please select the .mafile you wish to import.</string>
    <string name="steamguard_enable_failure">Failed to enable mobile authenticator: %1$s</string>
    <string name="steamguard_import_password">Please enter the password for the account \'%1$s\'.</string>
    <string name="steamguard_duplicate">Your account is already using the Official Mobile Authenticator.
        You cannot use two authenticators at the same time.</string>
    <string name="steamguard_instructions_finalize">To finalize adding the Mobile Authenticator, please enter the code sent to you by Steam via SMS.</string>
    <string name="steamguard_new">This is the first time you are logging into this account on this device.\n\nAs per Valve restrictions, you may not be allowed to trade or send trade offers from this device for the next 7 days.</string>
    <string name="steamguard_enable_success">Successfully enabled mobile authentication.\n\nPlease write down your emergency recovery code: %1$s</string>
    <string name="steamguard_export">Export Mobile Authenticator</string>
    <string name="steamguard_import">Import Mobile Authenticator</string>
    <string name="steamguard_unavailable">You can only enable Mobile Authenticator on a saved account.</string>
    <string name="steamguard_not_enabled">Steam Guard Mobile Authenticator is not set up on this device.</string>
    <string name="steamguard_enable_authenticator">Enable Authenticator</string>
    <string name="steamguard_manage_authenticator">Manage Authenticator</string>
    <string name="steamguard_import_authenticator">Import Authenticator (.mafile)</string>
    <string name="steamguard_export_authenticator">Export Authenticator (.mafile)</string>
    <string name="steamguard_get_revocation_code">View Revocation Code</string>
    <string name="steamguard_revocation_code">Your revocation code is:\n%1$s</string>
    <string name="steamguard_import_error_wrong_account">Error: this authentication information is for a different Steam account: %1$s</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="description_logo">Ice Logo</string>
    <string name="sign_in">Log In</string>
    <string name="developed_by">developed by aegamesi.com</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_remember">Remember</string>
    <string name="login_different">Log in with a different account</string>
    <string name="login_saved">Log in with a saved account</string>
    <string name="prompt_steamguard">Steam Guard</string>
    <string name="action_sign_in">Sign in</string>
    <string name="signingout">Signing out…</string>
    <string name="error_disconnected">Disconnected from the Steam Network</string>
    <string name="friend_add">Add Friend</string>
    <string name="friend_accept">Accept Request</string>
    <string name="friend_ignore">Ignore Request</string>
    <string name="friend_add_prompt">Please enter the SteamID64 or email address of the friend you wish to add:</string>
    <string name="friend_add_fail">Failed to add friend: %1$s</string>
    <string name="friend_add_success">Added friend.</string>
    <string name="friend_remove">Remove Friend</string>
    <string name="friend_remove_message">Are you sure to want to remove \'%1$s\' from your friends list?</string>
    <string name="friend_removed">Removed \'%1$s\'.</string>
    <string name="friend_search">Search friends list</string>
    <string name="friend_request_accept">Accepted Friend Request</string>
    <string name="friend_request_ignore">Ignored Friend Request</string>
    <string name="friend_view_steam">View on Steam</string>
    <string name="friend_view_steamrep">View on SteamRep</string>
    <string name="friend_view_library">View Games</string>
    <string name="friend_is_typing">Other user is typing…</string>
    <string name="profile_view">View Profile</string>
    <string name="profile_summary">Summary</string>
    <string name="profile_loading_summary">Loading summary…</string>
    <string name="friend_request">Friend Request</string>
    <string name="friend_request_text">%1$s has added you.</string>
    <string name="friend_request_multi" tools:ignore="PluralsCandidate">%1$d messages</string>
    <string name="friend_block">Block</string>
    <string name="friend_unblock">Unblock</string>
    <string name="profile_playing_game">Playing %1$s</string>
    <string name="chat_group">Group Chat</string>
    <string name="chat_with">Chat with %1$s</string>
    <string name="friend_invite_to_chat">Invite to Chat…</string>
    <string name="friend_invite_to_trade">Invite to Trade</string>
    <string name="friend_send_trade_offer">Send a Trade Offer</string>
    <string name="chat_you">You</string>
    <string name="chat_them">Them</string>
    <string name="chat_chat">Chat</string>
    <string name="chat_participants">Participants</string>
    <string name="library_playtime">%1$.1f hrs on record</string>
    <string name="library_playtime_full">%1$.1f hrs past two weeks\n%2$.1f hrs on record</string>
    <string-array name="connection_status">
        <item>Unknown Status</item>
        <item>Initializing…</item>
        <item>Connecting…</item>
        <item>Logging on…</item>
        <item>Authenticating…</item>
        <item>Fetching Key…</item>
        <item>Connected</item>
        <item>Disconnected</item>
    </string-array>
    <string-array name="persona_states">
        <item>Offline</item>
        <item>Online</item>
        <item>Busy</item>
        <item>Away</item>
        <item>Snooze</item>
        <item>Looking to Trade</item>
        <item>Looking to Play</item>
    </string-array>
    <string-array name="allowed_states">
        <item>Online</item>
        <item>Away</item>
        <item>Busy</item>
        <item>Snooze</item>
        <item>Looking to Trade</item>
        <item>Looking to Play</item>
    </string-array>
    <string name="time_now">Now</string>
    <string name="time_just_now">Just now</string>
    <string name="time_in_future">In the future</string>
    <plurals name="time_mins">
        <item quantity="one">%1$d min</item>
        <item quantity="other">%1$d mins</item>
    </plurals>
    <string name="cannot_connect_to_steam">Cannot connect to Steam!</string>
    <string name="error_loginkey_expired">Your login key has expired. Please log in again.</string>
    <string name="error_getting_key">Error fetching WebAPI key. Some features (like trade offers) may not work properly.</string>
    <string name="error_incorrect_steamguard">The SteamGuard auth code is incorrect</string>
    <string name="error_steamguard_required">This account is protected by SteamGuard</string>
    <string name="cannot_auth_with_steamweb">Unable to authenticate with SteamWeb. Steam servers may be down.</string>
    <string name="steam_avatar">Avatar</string>
    <string name="nav_about">About Ice</string>
    <string name="nav_signout">Sign Out</string>
    <string name="nav_games">Library</string>
    <string name="nav_friends">Friends</string>
    <string name="signed_out">Signed Out</string>
    <string name="feature_not_implemented">Feature not implemented</string>
    <string name="login_confirm_delete_account">Are you sure you want to remove the account \'%1$s\'?</string>
    <string name="x_new_messages" tools:ignore="PluralsCandidate">%1$d messages</string>
    <string name="btn_3dots">&#8942;</string>
    <string name="add">Add</string>
    <string name="set_currently_playing_game">Set Currently Playing Game</string>
    <string name="change">Change</string>
    <string name="change_display_name">Change Display Name</string>
    <string name="change_display_name_prompt">Please enter your new display name:</string>
    <string name="action_failed">Action failed.</string>
    <string name="nav_settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="chat">Chat</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="chat_hint">Tap to chat</string>
    <string name="send_button">Send</string>
    <string name="unknown">0</string>
    <string name="pref_reconnect">Auto-Reconnect</string>
    <string name="pref_reconnect_summ">Reconnect when disconnected from the Steam network</string>
    <string name="pref_notification">Notification Settings</string>
    <string name="persist_notification">Persistent Notification</string>
    <string name="persist_notification_summ">Unchecking this will tell Android that Ice is low-priority.</string>
    <string name="pref_hide_blocked_users">Hide Blocked Users</string>
    <string name="pref_advanced">Advanced Settings</string>
    <string name="pref_advanced_summ">Do not use these unless you know what you\'re doing.</string>
    <string name="pref_recent_chats">Recent Chats</string>
    <string name="pref_recent_chats_summ">Adjust the cut-off for recent chats.</string>
    <string name="pref_chat_compact">Compact Chat Display</string>
    <string name="pref_notification_sound">Notification Sound</string>
    <string name="pref_vibrate">Vibrate on Message</string>
    <string name="pref_vibrate_summ">Vibrate when you receive a chat message</string>
    <string name="pref_notification_chat">Chat Notifications</string>
    <string name="pref_notification_friendrequest">Friend Request Notifications</string>
    <string name="pref_chat_compact_summ">Display compact lines instead of large bubbles.</string>
    <string name="pref_machineauth">Override machineAuth</string>
    <string name="pref_machineauth_prompt">Input machineAuth:</string>
    <string name="pref_webapikey">Edit cached WebAPI Key</string>
    <string name="pref_webapikey_prompt">Input WebAPI Key:</string>
    <string name="pref_webapikey_summary">Requires this account\'s key for full functionality.</string>
    <string-array name="pref_recent_chats_entries">
        <item>Within 7 days</item>
        <item>Within 2 days</item>
        <item>Within 24 hours</item>
        <item>Within 1 hour</item>
        <item>Do not show recent chats</item>
    </string-array>
</resources>