<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_nav_friends"
            android:title="@string/nav_friends" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_nav_games"
            android:title="@string/nav_games" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_nav_browser"
            android:title="@string/nav_browser" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />

    </group>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_nav_about"
        android:title="@string/nav_about" />

    <item
        android:id="@+id/nav_signout"
        android:icon="@drawable/ic_nav_signout"
        android:title="@string/nav_signout" />

</menu>
