<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/DESC_steam_avatar"
            android:padding="2dip"
            android:src="@drawable/default_avatar"
            app:civ_border_width="2dip"/>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:layout_weight="0.20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                tools:text="Name"/>

            <TextView
                android:id="@+id/profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:text="Status"/>

        </LinearLayout>

        <TextView
            android:id="@+id/profile_level"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:background="@drawable/bg_steam_level"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            tools:text="\?"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/profile_button_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chat"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <!-- Button Group 1 -->
                <Button
                    android:id="@+id/profile_button_add_friend"
                    style="?attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/friend_add"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/profile_button_remove_friend"
                    style="?attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_remove"
                    android:layout_weight="1"/>
                <!-- End Group 1 -->

                <!-- Button Group 2 -->
                <Button
                    android:id="@+id/profile_button_unblock_friend"
                    style="?attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/friend_unblock"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/profile_button_block_friend"
                    style="?attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/friend_block"
                    android:layout_weight="1"/>
                <!-- End Group 2 -->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/profile_button_viewsteam"
                    style="?attr/selectableItemBackground"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friend_view_steam"/>

                <Button
                    android:id="@+id/profile_button_viewsteamrep"
                    style="?attr/selectableItemBackground"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friend_view_steamrep"/>

            </LinearLayout>

            <Button
                android:id="@+id/profile_button_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friend_view_library"/>

            

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:layout_marginTop="24dp"
                card_view:cardBackgroundColor="@color/dark_background"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="0dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/profile_summary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/profile_summary"
                        android:autoLink="web"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hyphenationFrequency="none"
                        android:text="@string/profile_loading_summary"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>